change database url

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # PORT= 5432
 # TZ=Asia/Kolkata
 
-DATABASE_URL="postgres://dbmasteruser:%21Mv3q4.d5%24ThS26hafLZ%3FG%7CJiu%5D96%2B%60%23@ls-8388f2ed5771d29ed368d041b2103b011f098a4c.che4k442y8za.ap-south-1.rds.amazonaws.com:5432/NuziveeduDelights-db"
+DATABASE_URL="postgres://dbmasteruser:!Mv3q4.d5$ThS26hafLZ?G|Jiu]96+`#@ls-8388f2ed5771d29ed368d041b2103b011f098a4c.che4k442y8za.ap-south-1.rds.amazonaws.com:5432/NuziveeduDelights-db"
